Fix spacing between () and {}, also add post method (but not complete)

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -45,6 +45,15 @@ button {
   font-size: 15px;
 }
 
+input {
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 15px 32px;
+  display: inline-block;
+  font-size: 15px;
+}
+
 a {
   font-size: 25px;
   padding-right: 20px;
